--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -91,15 +91,15 @@ http {
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
         location /api {
-            proxy_pass ${WALLY_BACKEND_SERVICE}
+            proxy_pass http://${WALLY_BACKEND_SERVICE}
         }
 
         location /docs {
-            proxy_pass ${WALLY_BACKEND_SERVICE}
+            proxy_pass http://${WALLY_BACKEND_SERVICE}
         }
 
         location /reporting {
-            proxy_pass ${WALLY_REPORTING_SERVICE}
+            proxy_pass http://${WALLY_REPORTING_SERVICE}
         }
 
         location / {
