--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -90,17 +90,17 @@ http {
         # Load configuration files for the default server block.
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
-        location /api {
-            proxy_pass http://${WALLY_BACKEND_SERVICE}:8000
-        }
+        # location /api {
+        #     proxy_pass http://${WALLY_BACKEND_SERVICE}:8000
+        # }
 
-        location /docs {
-            proxy_pass http://${WALLY_BACKEND_SERVICE}:8000
-        }
+        # location /docs {
+        #     proxy_pass http://${WALLY_BACKEND_SERVICE}:8000
+        # }
 
-        location /reporting {
-            proxy_pass http://${WALLY_REPORTING_SERVICE}:3000
-        }
+        # location /reporting {
+        #     proxy_pass http://${WALLY_REPORTING_SERVICE}:3000
+        # }
 
         location / {
             # First attempt to serve request as file, then
