--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -90,17 +90,17 @@ http {
         # Load configuration files for the default server block.
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
-        location /api {
+        location /api/ {
             proxy_set_header Host $host;
             proxy_pass http://${WALLY_BACKEND_SERVICE}:8000/;
         }
 
-        location /docs {
+        location /docs/ {
             proxy_pass http://${WALLY_BACKEND_SERVICE}:8000/;
             proxy_set_header Host $host;
         }
 
-        location /reporting {
+        location /reporting/ {
             proxy_set_header Host $host;
             proxy_pass http://${WALLY_REPORTING_SERVICE}:3000/;
         }
