Changing nginx config file

--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -91,7 +91,8 @@ http {
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
         location /api {
-            proxy_pass http://${WALLY_BACKEND_SERVICE}:8000/;
+            proxy_pass http://${WALLY_BACKEND_SERVICE}:8000;
+            proxy_set_header Host $host;
         }
 
         location /docs {
