move conf template

--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -96,11 +96,13 @@ http {
         }
 
         location /docs {
-            proxy_pass http://${WALLY_BACKEND_SERVICE}:8000/;
+            proxy_pass http://${WALLY_BACKEND_SERVICE}:8000;
+            proxy_set_header Host $host;
         }
 
         # location /reporting {
-        #     proxy_pass http://${WALLY_REPORTING_SERVICE}:3000/;
+        #     proxy_pass http://${WALLY_REPORTING_SERVICE}:3000;
+    #         proxy_set_header Host $host;
         # }
 
         location / {
