--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -15,9 +15,10 @@ events {
 }
 
 http {
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format main '$remote_addr - $remote_user [$time_local] '
+                    '"$request" $status $body_bytes_sent '
+                    '"$http_referer" "$http_user_agent" '
+                    'rt=$request_time uct="$upstream_connect_time" uht="$upstream_header_time" urt="$upstream_response_time"';
 
     access_log  /var/opt/rh/rh-nginx112/log/nginx/access.log  main;
 
@@ -102,11 +103,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # location /reporting {
-        #     proxy_pass http://${WALLY_REPORTING_SERVICE}:3000;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        # }
+        location /reporting {
+            proxy_pass http://${WALLY_REPORTING_SERVICE}:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
 
         location / {
             # First attempt to serve request as file, then
