--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -103,8 +103,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location /reports {
-            proxy_pass http://${WALLY_REPORTING_SERVICE}:3000;
+        location /reports/ {
+            proxy_pass http://${WALLY_REPORTING_SERVICE}:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
