port changed to 3001 for reporting and config updated

--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -104,7 +104,7 @@ http {
         }
 
         location /reporting {
-            proxy_pass http://${WALLY_REPORTING_SERVICE}:3000;
+            proxy_pass http://${WALLY_REPORTING_SERVICE}:3001/reports;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
