--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -103,8 +103,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location /reporting {
-            proxy_pass http://${WALLY_REPORTING_SERVICE}:3001/reports;
+        location /reporting/ {
+            proxy_pass http://${WALLY_REPORTING_SERVICE}:3001/reports/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
