--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -4,7 +4,7 @@
 
 
 worker_processes auto;
-error_log /var/opt/rh/rh-nginx112/log/nginx/error.log debug;
+error_log /var/opt/rh/rh-nginx112/log/nginx/error.log;
 pid /var/opt/rh/rh-nginx112/run/nginx/nginx.pid;
 
 # Load dynamic modules. See /opt/rh/rh-nginx112/root/usr/share/doc/README.dynamic.
