--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -104,12 +104,12 @@ http {
         }
 
         location /files {
-            proxy_http_version 1.1;
+            proxy_pass http://minio:9000;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_read_timeout 15m; # Default value is 60s which is not sufficient for MinIO.
             proxy_send_timeout 15m; # Default value is 60s which is not sufficient for MinIO.
             proxy_request_buffering off; # Disable any internal request bufferring.
-            proxy_pass http://minio:9000;
         }
 
         location / {
