--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -104,12 +104,21 @@ http {
         }
 
         location /files {
-            proxy_pass http://minio:9000;
-            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+
             proxy_read_timeout 15m; # Default value is 60s which is not sufficient for MinIO.
             proxy_send_timeout 15m; # Default value is 60s which is not sufficient for MinIO.
-            proxy_request_buffering off; # Disable any internal request bufferring.
+
+            proxy_connect_timeout  300;
+            # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_buffering off;
+
+            proxy_pass http://minio:9000;
         }
 
         location / {
