--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -103,7 +103,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location /wally-dev/ {
+        location /files/ {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -118,7 +118,7 @@ http {
             proxy_set_header Connection "";
             proxy_buffering off;
 
-            proxy_pass http://minio:9000;
+            proxy_pass http://minio:9000/minio/wally-dev/;
         }
 
         location / {
