--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -107,7 +107,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Host $http_host;
+            proxy_set_header Host $host;
 
             proxy_read_timeout 15m; # Default value is 60s which is not sufficient for MinIO.
             proxy_send_timeout 15m; # Default value is 60s which is not sufficient for MinIO.
