--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -32,6 +32,9 @@ http {
     # Enable Gzip compressed.
     gzip on;
 
+    # Serve pre-compressed files
+    gzip_static on;
+
     # Enable compression both for HTTP/1.0 and HTTP/1.1 (required for CloudFront).
     gzip_http_version  1.0;
 
@@ -55,10 +58,20 @@ http {
     # today) would display gibberish if their proxy gave them the gzipped version.
     gzip_vary          on;
 
+    # This assigns the number and the size of the compression buffers.
+    # The default is gzip_buffers 4 4k;
+    # Increase this value to make sure that big Javascript or
+    # CSS files can be compressed as well.
+    gzip_buffers 16 8k;
+
     # Compress all output labeled with one of the following MIME-types.
     gzip_types
       application/atom+xml
       application/javascript
+      application/x-javascript
+      text/xml
+      application/xml+rss
+      text/javascript
       application/json
       application/rss+xml
       application/vnd.ms-fontobject
