--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -36,7 +36,10 @@ http {
     gzip_static on;
 
     # Enable compression both for HTTP/1.0 and HTTP/1.1 (required for CloudFront).
-    gzip_http_version  1.0;
+    # gzip_http_version  1.0;
+
+    # Set higher HTTP protocol version fro proxying connections to upstream.
+    proxy_http_version 1.1;
 
     # Compression level (1-9).
     # 5 is a perfect compromise between size and cpu usage, offering about
