nginx config test

--- a/frontend/nginx.conf.tmpl
+++ b/frontend/nginx.conf.tmpl
@@ -28,10 +28,6 @@ http {
     keepalive_timeout  65;
     types_hash_max_size 2048;
 
-    proxy_cache_lock on;
-    proxy_cache_lock_age 45s;
-    proxy_cache_lock_timeout 45s;
-
     # Enable Gzip compressed.
     gzip on;
 
@@ -103,6 +99,7 @@ http {
         listen       [::]:8080 default_server;
         server_name  _;
         root         /opt/app-root/src;
+        fail_timeout 45s;
 
         # Load configuration files for the default server block.
         include      /opt/app-root/etc/nginx.default.d/*.conf;
@@ -111,6 +108,12 @@ http {
             proxy_pass http://${WALLY_BACKEND_SERVICE}:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_cache_lock on;
+            proxy_cache_lock_age     45;
+            proxy_cache_lock_timeout 45;
+            proxy_connect_timeout    45;
+            proxy_send_timeout       45;
+            proxy_read_timeout       45;
         }
 
         location /docs {
